--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,6 +97,12 @@
 	justify-content: flex-start;
 }
 
+.flex-start-center {
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+}
+
 /* SCREENS */
 .desktop-only {
 	display: none;
